--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="sepDiv">
                   <h1 id="form">Formação</h1>
-                  <p>Cursando Análise e Desenvolvimento de Sistemas (3º Período) na Faculdade Martha Falcão - Wyden.</p>
+                  <p>Cursando Análise e Desenvolvimento de Sistemas (3º Período) na <a href="https://www.wyden.com.br/unidades/fmf" target="_blank">Faculdade Martha Falcão - Wyden.</a></p>
             </div>
 
             <div class="sepDiv">
@@ -55,7 +55,7 @@
             <div class="sepDiv">
                   <h1 id="projects">Projetos</h1>
                   <div class="gridProjects">
-                        <a href=""><img src="imagens/files.jpg" alt="">Organizador de Arquivos</a>
+                        <a href="https://github.com/leonardofabricio001/Organizador-De-Arquivos" target="_blank"><img src="imagens/files.jpg" alt="">Organizador de Arquivos</a>
                         <a href=""><img src="imagens/soon.jpg" alt="">Em breve</a>
                         <a href=""><img src="imagens/soon.jpg" alt="">Em breve</a>
                   </div>
