--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="sepDiv">
                   <h1 id="form">Formação</h1>
-                  <p>Cursando Análise e Desenvolvimento de Sistemas (3º Período) na <a href="https://www.wyden.com.br/unidades/fmf" target="_blank">Faculdade Martha Falcão - Wyden.</a></p>
+                  <p>Cursando Análise e Desenvolvimento de Sistemas (2º Período) na <a href="https://www.wyden.com.br/unidades/fmf" target="_blank">Faculdade Martha Falcão Wyden.</a></p>
             </div>
 
             <div class="sepDiv">
