--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="style.css">
 </head>
 
-<body onload="window.alert('Aviso! O site não está responsivo. Irei trabalhar na responsividade em breve...')">
+<body onload="window.alert('O site não está responsivo. Irei trabalhar na responsividade em breve...')">
       <header class="head">
             <ul class="nav">
                   <a href="#about">
