added python info

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
             <div class="sepDiv">
                   <h1 id="skills">Habilidades</h2>
-                        <img class="imgStyle" src="imagens/htmllogo.png" alt="" id="html">
-                        <img class="imgStyle" src="imagens/csslogo.png" alt="" id="css">
-                        <img class="imgStyle" src="imagens/jslogo.png" alt="" id="js">
-                        <img class="imgStyle" src="imagens/gitlogo.png" alt="" id="git">
+                        <img class="imgStyle" src="imagens/htmllogo.png" alt="HTML logo" id="html">
+                        <img class="imgStyle" src="imagens/csslogo.png" alt="CSS logo" id="css">
+                        <img class="imgStyle" src="imagens/jslogo.png" alt="JavaScript logo" id="js">
+                        <img class="imgStyle" src="imagens/pythonlogo.png" alt="Python logo" id="py">
+                        <img class="imgStyle" src="imagens/gitlogo.png" alt="Git logo" id="git">
                         <p id="output"></p>
             </div>
 
