html info update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Projeto Site</title>
+      <title>Leonardo Fabrício de Ávila Silva</title>
       <link rel="stylesheet" href="style.css">
 </head>
 
@@ -34,7 +34,7 @@
       <div class="mainDiv">
             <div class="sepDiv">
                   <h1 id="about">Sobre Mim</h1>
-                  <p>Me chamo Leonardo Fabrício. <br>Estou em busca de experiência profissional e conhecimento na área
+                  <p>Olá, Me chamo Leonardo Fabrício. <br> Tenho 19 anos e estou em busca de experiência profissional e conhecimento na área
                         de Tecnologia da Informação.</p>
             </div>
 
